добавлен код плана

--- a/plan.html
+++ b/plan.html
@@ -1,11 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/header.min.css">
+  <link rel="stylesheet" href="css/hero.min.css">
+  <title>БК “Ясенево” | Планировки</title>
 </head>
+
 <body>
-    
+  <div class="wrapper">
+    <header>
+      <div class="container">
+        <div class="header">
+          <div class="header__logo"><a href="http://127.0.0.1:5500/index.html">БК “Ясенево”</a></div>
+          <nav>
+            <ul class="nav">
+              <li class="nav__item_b"><a href="index.html">Главная</a></li>
+              <li class="nav__item"><a href="location.html">Расположение</a></li>
+              <li class="nav__item"><a href="plans.html">Планировки</a></li>
+              <li class="nav__item nav__item_button">
+                <a href="tel:+74952214022">
+                  <span>+7 (495) 221-40-22</span>
+                  <img class="nav__item__image" src="assets/images/phone.png" alt="phone">
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <section class="hero">
+          <h1 class="hero__title hero__title_smaller">Выбирайте планировку для любого бизнеса</h1>
+          <div class="hero__parametrs">
+            <div class="hero__parametrs__item">
+              <span><strong>от 60 м²</strong></span>
+              <span>помещения под офисы</span>
+            </div>
+          </div>
+          <img class="hero__image" src="assets/images/Mask group-2.png" alt="Бизнес квартал">
+        </section>
+        <p class="plans__place">
+          Vita-офисы в бизнес-квартале – новые эффективные рабочие пространства на основе идеи витальности (жизненной
+          силы), эстетики и функциональности. Создают благоприятное воздействие на эмоциональное состояние и
+          работоспособность сотрудников, развитие бизнеса. Это единая цифровая среда, инфраструктура для резидентов и
+          уникальные шеринг-помещения: комната для тимбилдинга, лекторий, кабинет врача, йога-класс и многое другое.
+        </p>
+        <section class="plans">
+          <div class="plans__layouts">
+            <span>Планировки</span>
+          </div>
+          <div class="grid-container">
+            <div class="grid-item">
+              <img src="assets/images/image 8.png" alt="Image 1">
+              <h3>Офис, 174,2 м</h3>
+              <p>Увлажнение воздуха. Кондиционирование. Контроль СО2. Фильтрация воздуха. Вид на пруд. Вид на жилой
+                район</p>
+              <button>Заказать звонок</button>
+            </div>
+            <div class="grid-item">
+              <img src="assets/images/image 8-3.png" alt="Image 2">
+              <h3>Офис, 174,2 м</h3>
+              <p>Увлажнение воздуха. Кондиционирование. Контроль СО2. Фильтрация воздуха. Вид на пруд. Вид на жилой
+                район</p>
+              <button>Заказать звонок</button>
+            </div>
+            <div class="grid-item">
+              <img src="assets/images/image 8-4.png" alt="Image 3">
+              <h3>Офис, 174,2 м</h3>
+              <p>Увлажнение воздуха. Кондиционирование. Контроль СО2. Фильтрация воздуха. Вид на пруд. Вид на жилой
+                район</p>
+              <button>Заказать звонок</button>
+            </div>
+            <div class="grid-item">
+              <img src="assets/images/image 8-1.png" alt="Image 4">
+              <h3>Офис, 174,2 м</h3>
+              <p>Увлажнение воздуха. Кондиционирование. Контроль СО2. Фильтрация воздуха. Вид на пруд. Вид на жилой
+                район</p>
+              <button>Заказать звонок</button>
+            </div>
+            <div class="grid-item">
+              <img src="assets/images/image 8-2.png" alt="Image 5">
+              <h3>Офис, 174,2 м</h3>
+              <p>Увлажнение воздуха. Кондиционирование. Контроль СО2. Фильтрация воздуха. Вид на пруд. Вид на жилой
+                район</p>
+              <button>Заказать звонок</button>
+            </div>
+          </div>
+        </section>
+        <div class="plans__img"><img src="assets/images/image 3.png" alt="бизнес центр" class="images"></div>
+        <section class="pdf">
+          <div class="pdf__p">
+            <span>Подробно</span>
+          </div>
+          <h2 class="pdf__title">Вся информация о проекте — в презентации</h2>
+          <ul>
+            <li>25 слайдов подробной информации</li>
+            <li>Инфраструктура, благоустройство, расположение</li>
+            <li>Инженерия, концепция и тд.</li>
+          </ul>
+          <img src="assets/images/image 6.png" alt="pdf" class="pdf__image">
+          <a href="/assets/documents/Презентация для примера.pdf" class="pdf__link pdf__link_button">Скачать
+            презентацию</a>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <div class="footer-text">
+            Лучшее помещение под ваши задачи, основываясь на аналитике бизнес-среды в локации.
+
+          </div>
+          <div class="footer-logo">
+            БК “Ясенево”
+          </div>
+          <form action="" class="order__form" method="get">
+            <input class="order__input" id="name" type="text" placeholder="Ваше Имя" required>
+            <input class="order__input" id="tel" type="tel" placeholder="+7 987 654 32 10" maxlength="12"required>
+            <button type="submit" class="button">Получить консультацию</button>
+          </form>
+          <div class="footer-button">+7 (495) 221-40-22</div>
+        </div>
+      </div>
+    </footer>
 </body>
+
 </html>
