--- a/location.html
+++ b/location.html
@@ -1,11 +1,138 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/header.min.css">
+  <link rel="stylesheet" href="css/hero.min.css">
+  <title>БК “Ясенево” | Расположение</title>
 </head>
+
 <body>
-    
+  <div class="wrapper">
+    <header>
+      <div class="container">
+        <div class="header">
+          <div class="header__logo"><a href="http://127.0.0.1:5500/index.html">БК “Ясенево”</a></div>
+          <nav>
+            <ul class="nav">
+              <li class="nav__item_b"><a href="index.html">Главная</a></li>
+              <li class="nav__item"><a href="location.html">Расположение</a></li>
+              <li class="nav__item"><a href="plans.html">Планировки</a></li>
+              <li class="nav__item nav__item_button">
+                <a href="tel:+74952214022">
+                  <span>+7 (495) 221-40-22</span>
+                  <img class="nav__item__image" src="assets/images/phone.png" alt="phone">
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <section class="hero">
+          <h1 class="hero__title hero__title_smaller">БК "Ясенево" расположен в районе с готовой инфраструктурой</h1>
+
+          <div class="hero__parametrs">
+            <div class="hero__parametrs__item">
+              <span><strong>1 мин</strong></span>
+              <span>пешком от метро</span>
+            </div>
+          </div>
+          <img class="hero__image" src="assets/images/Mask group-1.png" alt="Бизнес квартал">
+        </section>
+        <p class="map__place">
+          Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
+          станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит единственный путь
+          от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.
+        </p>
+        <section class="map">
+          <div class="map__p">
+            <span>Расположение</span>
+          </div>
+          <div class="map__img"><img src="assets/images/image 7.png" alt="бизнес центр" class="images"></div>
+        </section>
+        <section class="inf">
+          <div class="inf__p">
+            <span>Инфраструктура</span>
+          </div>
+          <h2 class="inf__title">Район с готовой инфраструктурой</h2>
+
+          <div class="grid-container">
+            <div class="grid-item big"><img src="assets/images/image 5.png" alt="Image 1">
+              <div class="overlay">
+                <p>Торгово-офисный центр с крытым<br> переходом из метро</p>
+              </div>
+            </div>
+
+            <div class="grid-item"><img src="assets/images/image 5-1.png" alt="Image 2">
+              <div class="overlay">
+                <p>Подземная и наземная парковка с электро-зарядками</p>
+              </div>
+            </div>
+            <div class="grid-item"><img src="assets/images/image 5-2.png" alt="Image 3">
+              <div class="overlay">
+                <p>Благоустройство более<br> 7Га с выходом к<br> набережной</p>
+              </div>
+            </div>
+            <div class="grid-item big1"><img src="assets/images/image 5-3.png" alt="Image 4">
+              <div class="overlay">
+                <p>Уникальные<br> пространства для<br> резидентов бизнес<br> центра</p>
+              </div>
+            </div>
+            <div class="grid-item"><img src="assets/images/image 5-4.png" alt="Image 5">
+              <div class="overlay">
+                <p>«Уличная гостиная» с<br> удобной мебелью</p>
+              </div>
+            </div>
+            <div class="grid-item"><img src="assets/images/image 5-5.png" alt="Image 6">
+              <div class="overlay">
+                <p>Магазины, панорамный<br> ресторан, шоу-румы,<br> эвенты</p>
+              </div>
+            </div>
+          </div>
+
+        </section>
+        <section class="pdf">
+          <div class="pdf__p">
+            <span>Подробно</span>
+          </div>
+          <h2 class="pdf__title">Вся информация о проекте — в презентации</h2>
+          <ul>
+            <li>25 слайдов подробной информации</li>
+            <li>Инфраструктура, благоустройство, расположение</li>
+            <li>Инженерия, концепция и тд.</li>
+          </ul>
+          <img src="assets/images/image 6.png" alt="pdf" class="pdf__image">
+          <a href="/assets/documents/Презентация для примера.pdf" class="pdf__link pdf__link_button">Скачать
+            презентацию</a>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <div class="footer-text">
+            Лучшее помещение под ваши задачи, основываясь на аналитике бизнес-среды в локации.
+
+          </div>
+          <div class="footer-logo">
+            БК “Ясенево”
+          </div>
+          <form action="" class="order__form" method="get">
+            <input class="order__input" id="name" type="text" placeholder="Ваше Имя" required>
+            <input class="order__input" id="tel" type="tel" placeholder="+7 987 654 32 10" maxlength="12"required>
+            <button type="submit" class="button">Получить консультацию</button>
+          </form>
+          <div class="footer-button">+7 (495) 221-40-22</div>
+        </div>
+      </div>
+    </footer>
 </body>
+
 </html>
