Добавила код главная

--- a/index.html
+++ b/index.html
@@ -1,11 +1,196 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/header.min.css">
+  <link rel="stylesheet" href="css/hero.min.css">
+  <title>БК “Ясенево” | Главная</title>
 </head>
+
 <body>
-    
+  <div class="wrapper">
+
+    <header>
+      <div class="container">
+        <div class="header">
+          <div class="header__logo"><a href="http://127.0.0.1:5500/index.html">БК “Ясенево”</a></div>
+          <nav>
+            <ul class="nav">
+              <li class="nav__item_b"><a href="index.html">Главная</a></li>
+              <li class="nav__item"><a href="location.html">Расположение</a></li>
+              <li class="nav__item"><a href="plans.html">Планировки</a></li>
+              <li class="nav__item nav__item_button">
+                <a href="tel:+74952214022">
+                  <span>+7 (495) 221-40-22</span>
+                  <img class="nav__item__image" src="assets/images/phone.png" alt="phone">
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <section class="hero">
+          <h1 class="hero__title">Офисы класса “А” в бизнес-квартале “Ясенево”</h1>
+
+          <div class="hero__parametrs hero__parametrs_large">
+            <div class="hero__parametrs__item">
+              <span><strong>1 мин</strong></span>
+              <span>пешком от метро</span>
+            </div>
+            <div class="hero__parametrs__item">
+              <span><strong>от 60 м²</strong></span>
+              <span>помещения под офисы</span>
+            </div>
+            <div class="hero__parametrs__item">
+              <span><strong>2024 г.</strong></span>
+              <span>первая очередь</span>
+            </div>
+          </div>
+          <img class="hero__image" src="assets/images/Mask group.png" alt="Бизнес квартал">
+          <nav>
+            <ul class="nav hero-nav">
+              <li class="nav__item nav__item_button"><a href="location.html">Расположение</a></li>
+              <li class="nav__item nav__item_button"><a href="plans.html">Планировки</a></li>
+            </ul>
+          </nav>
+
+        </section>
+        <section class="about">
+          <div class="about-bk">
+            <span>О ПРОЕКТЕ</span>
+          </div>
+          <h2 class="about-title">Уникальный проект в динамично развивающемся районе Москвы</h2>
+          <p class="place">
+            Бизнес-квартал «Ясенево» расположен на пересечении ключевых маршрутов локации – в 1 мин. от действующей
+            станции метро и автотрассы СБВ (дублёр МКАД) с удобным съездом на парковку. Здесь проходит
+            единственный путь
+            от жилых районов к метро, что обеспечивает высокую активность пешеходного трафика.</p>
+
+          <div class="flex-container">
+            <div class="image-text">
+              <img src="assets/images/image 4.png" alt="очистки воздуха">
+              <p>Повышенный класс<br> очистки воздуха</p>
+            </div>
+            <div class="image-text">
+              <img src="assets/images/image 4-1.png" alt="Открывающиеся окна">
+              <p>Открывающиеся окна с<br> дистанционным управлением</p>
+            </div>
+            <div class="image-text">
+              <img src="assets/images/image 4-2.png" alt="Паровое увлажнение воздуха">
+              <p>Паровое увлажнение воздуха</p>
+            </div>
+            <div class="image-text">
+              <img src="assets/images/image 4-3.png" alt="Возможна отделка офиса">
+              <p>Возможна отделка офиса<br> на выбор</p>
+            </div>
+            <div class="image-text">
+              <img src="assets/images/image 4-4.png" alt="Офисная кухня">
+              <p>Офисная кухня в каждом<br> лоте</p>
+            </div>
+
+          </div>
+          <div class="about-infrast">
+            <p class="infrast">
+              Vita-офисы в бизнес-квартале – новые эффективные рабочие пространства на основе идеи витальности
+              (жизненной
+              силы), эстетики и функциональности. Создают благоприятное воздействие на эмоциональное состояние и
+              работоспособность сотрудников, развитие бизнеса. Это единая цифровая среда, инфраструктура для резидентов
+              и
+              уникальные шеринг-помещения: комната для тимбилдинга, лекторий, кабинет врача, йога-класс и многое другое.
+            </p>
+            <div class="about-button"><a href="/assets/documents/Презентация для примера.pdf" class="button">Узнать больше</a>
+            </div>
+          </div>
+
+
+          <div class="about__img"><img src="assets/images/image 3.png" alt="бизнес центр" class="images"></div>
+        </section>
+        <section class="inf">
+          <div class="inf__p">
+            <span>Инфраструктура</span>
+          </div>
+          <h2 class="inf__title">Район с готовой инфраструктурой</h2>
+
+          <div class="grid-container">
+            <div class="grid-item big"><img src="assets/images/image 5.png" alt="Image 1">
+              <div class="overlay">
+                <p>Торгово-офисный центр с крытым<br> переходом из метро</p>
+              </div>
+            </div>
+
+            <div class="grid-item"><img src="assets/images/image 5-1.png" alt="Image 2">
+              <div class="overlay">
+                <p>Подземная и наземная парковка с<br> электро-зарядками</p>
+              </div>
+            </div>
+            <div class="grid-item"><img src="assets/images/image 5-2.png" alt="Image 3">
+              <div class="overlay">
+                <p>Благоустройство более<br> 7Га с выходом к<br> набережной</p>
+              </div>
+            </div>
+            <div class="grid-item big1"><img src="assets/images/image 5-3.png" alt="Image 4">
+              <div class="overlay">
+                <p>Уникальные<br> пространства для<br> резидентов бизнес<br> центра</p>
+              </div>
+            </div>
+            <div class="grid-item"><img src="assets/images/image 5-4.png" alt="Image 5">
+              <div class="overlay">
+                <p>«Уличная гостиная» с<br> удобной мебелью</p>
+              </div>
+            </div>
+            <div class="grid-item"><img src="assets/images/image 5-5.png" alt="Image 6">
+              <div class="overlay">
+                <p>Магазины, панорамный<br> ресторан, шоу-румы,<br> эвенты</p>
+              </div>
+            </div>
+          </div>
+
+        </section>
+
+        </section>
+        <section class="pdf">
+          <div class="pdf__p">
+            <span>Подробно</span>
+          </div>
+          <h2 class="pdf__title">Вся информация о проекте — в презентации</h2>
+          <ul>
+            <li>25 слайдов подробной информации</li>
+            <li>Инфраструктура, благоустройство, расположение</li>
+            <li>Инженерия, концепция и тд.</li>
+          </ul>
+          <img src="assets/images/image 6.png" alt="pdf" class="pdf__image">
+          <a href="/assets/documents/Презентация для примера.pdf" class="pdf__link pdf__link_button">Скачать
+            презентацию</a>
+        </section>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <div class="footer-text">
+            Подберем лучшее помещение под ваши задачи, основываясь на аналитике бизнес-среды в локации.
+
+          </div>
+          <div class="footer-logo">
+            БК “Ясенево”
+          </div>
+          <form action="" class="order__form" method="get">
+            <input class="order__input" id="name" type="text" placeholder="Ваше Имя" required>
+            <input class="order__input" id="tel" type="tel" placeholder="+7 987 654 32 10" maxlength="12"required>
+            <button type="submit" class="button">Получить консультацию</button>
+          </form>
+          <div class="footer-button">+7 (495) 221-40-22</div>
+        </div>
+      </div>
+    </footer>
+  </div>
 </body>
+
 </html>
